src/objects/Super_Ball_Arbol__c.object
<CustomObject>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripción</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pais__c</fullName>
        <label>Pais</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>España</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financiero</fullName>
                </value>
                <value>
                    <fullName>Todos</fullName>
                </value>
                <value>
                    <fullName>Gobierno Provincial</fullName>
                </value>
                <value>
                    <fullName>Agricultura y pesca</fullName>
                </value>
                <value>
                    <fullName>Alimentación y Bebidas</fullName>
                </value>
                <value>
                    <fullName>Automoción</fullName>
                </value>
                <value>
                    <fullName>Banca</fullName>
                </value>
                <value>
                    <fullName>Construcción e inmobiliaria</fullName>
                </value>
                <value>
                    <fullName>Defensa</fullName>
                </value>
                <value>
                    <fullName>Educación</fullName>
                </value>
                <value>
                    <fullName>Farma</fullName>
                </value>
                <value>
                    <fullName>Gobierno Central</fullName>
                </value>
                <value>
                    <fullName>Gobierno Local</fullName>
                </value>
                <value>
                    <fullName>Industria</fullName>
                </value>
                <value>
                    <fullName>Justicia</fullName>
                </value>
                <value>
                    <fullName>Minería y Recursos Naturales</fullName>
                </value>
                <value>
                    <fullName>Ocio y Turismo</fullName>
                </value>
                <value>
                    <fullName>Petróleo y gas</fullName>
                </value>
                <value>
                    <fullName>Químicos</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Salud</fullName>
                </value>
                <value>
                    <fullName>Seguros</fullName>
                </value>
                <value>
                    <fullName>Servicios Profesionales</fullName>
                </value>
                <value>
                    <fullName>Tecnología y Electrónica</fullName>
                </value>
                <value>
                    <fullName>Telecom y Media</fullName>
                </value>
                <value>
                    <fullName>Transporte y Logística</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Super Ball - Arbol</label>
    <nameField>
        <label>Nombre de Super Ball - Arbol</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Super Ball - Arboles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>